# RekopGBC

./: .gitignore  Cargo.toml  build_script.sh
.github/workflows/: rust.yml
src/: cpu.rs  device.rs  error.rs  gpu.rs  hram.rs  joypad.rs  lib.rs  main.rs  mmu.rs  ppu.rs  registers.rs  render.rs  rom.rs  timer.rs  window.rs  wram.rs
