[package]
name = "rekop_gbc"
version = "0.1.0"
authors = ["mdheripre"]
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_big_array = "0.5"
clap = { version = "4.5.45", features = ["derive"] }
winit = { version = "0.29"}
thiserror = "2.0.16"
anyhow = "1.0.100"
log = "0.4.28"
env_logger = "0.11.8"
