[package]
name = "rekop_gbc"
version = "0.1.0"
authors = ["mdheripre"]
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.5.45", features = ["derive"] }
winit = "0.30.12"
thiserror = "2.0.16"
anyhow = "1.0.100"
log = "0.4.28"
env_logger = "0.11.8"
clippy = "0.0.302"
tokio = { version = "1.48.0", features = ["full"] }
glium = "0.36.0"
